Fix bug that prevented magnet from being dragged when behind bottom panel
[#169920953]

--- a/src/components/mag-field-control-panel.sass
+++ b/src/components/mag-field-control-panel.sass
@@ -10,6 +10,7 @@
   height: 84px
   width: 451px
   color: $color-army-light
+  pointer-events: auto
   &:hover
     cursor: pointer
   &:hover .icon.field-options-back2
