--- a/src/components/strength-panel.sass
+++ b/src/components/strength-panel.sass
@@ -10,6 +10,7 @@
   height: 84px
   width: 254px
   color: $color-army-light
+  pointer-events: auto
   &:hover
     cursor: pointer
   &:hover .icon.bar-magnet-strength-back2
